# todo-app-rust

./: docker-compose.yaml  readme.md
frontend/: index.html
todo-app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
todo-app/migrations/: 20250228000000_create_todos_table.sql  20250301080426_create_table_todo.up.sql
todo-app/src/: main.rs
todo-app/src/db/: mod.rs
todo-app/src/handlers/: mod.rs
todo-app/src/models/: mod.rs
