[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
# Web framework (mirip FastAPI)
actix-web = "4.9.0"
# Serialisasi/deserialisasi (mirip Pydantic)
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
# Database (mirip SQLAlchemy)
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid", "migrate"] }
# Async runtime
tokio = { version = "1.43.0", features = ["full"] }
# Environment variables
dotenv = "0.15.0"
# Logging
env_logger = "0.11.6"
log = "0.4.26"
# Error handling
anyhow = "1.0.96"
thiserror = "2.0.11"
# UUID
uuid = { version = "1.15.1", features = ["serde", "v4"] }
# Date/time
chrono = { version = "0.4.40", features = ["serde"] }